syntax = "proto3";

package cart;

option go_package = "pkg/api/shorten";

service Shorten {
  // создание короткого url
  rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse);
  // создание коротких url batch
  rpc BatchCreateShortURL(BatchCreateShortURLRequest) returns (BatchCreateShortURLResponse);
  // получить длинный url по короткому
  rpc GetByShort(GetByShortRequest) returns (GetByShortResponse);
  // получить список связей короткий-длинный url для юзера
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
  // удалить короткие urls юзера
  rpc DeleteUserURLsBatch(DeleteUserURLsBatchRequest) returns (DeleteUserURLsBatchResponse);

}

message CreateShortURLRequest {
  string user_id = 1; // id пользователя
  string url = 2; // исходный url
}

message CreateShortURLResponse {
  string result = 1; // короткий url
}


message BatchCreateShortURLRequestData {
  string original_url = 1; // исходный url
  string correlation_id = 2; // уникальный идентификатор
}

message BatchCreateShortURLRequest {
  repeated BatchCreateShortURLRequestData items = 1;
  string user_id = 2; // id пользователя
}

message BatchCreateShortURLResponseData {
  string short_url = 1; // короткий url
  string correlation_id = 2; // уникальный идентификатор
}

message BatchCreateShortURLResponse {
  repeated BatchCreateShortURLResponseData items = 1;
}

message GetByShortRequest {
  string user_id = 1; // id пользователя
  string url = 2; // короткие url
}

message GetByShortResponse {
  string full_url = 1; // исходный url
}

message GetUserURLsRequest {
  string user_id = 1; // id пользователя
}

message ShortenData {
  string short_url = 1; // короткий url
  string original_url = 2; // исходный url
}

message GetUserURLsResponse {
  repeated ShortenData items = 1;
}


message DeleteUserURLsBatchRequest {
  string user_id = 1; // id пользователя
  repeated string urls = 2; // короткие url
}

message DeleteUserURLsBatchResponse {
}